--- a/_posts/2022-08-09-수제블로그.md
+++ b/_posts/2022-08-09-수제블로그.md
@@ -11,7 +11,7 @@ sidebar:
   nav: "docs"
 ---
 
-### 블로그
+### 수제 블로그
 
 github에 블로그를 만들어 봤습니다. 기본적 세팅을 마치는 데 시간이 생각보다 많이 걸렸지만 처음 하느라 생소해서 그랬을 거라 생각합니다.
 그래도 손수 만들었다보니 좀 더 신경써서 관리하지 않을까 싶습니다.
