--- a/_posts/2022-08-21-Terminal.md
+++ b/_posts/2022-08-21-Terminal.md
@@ -3,7 +3,7 @@ layout: single
 title: "Windows Terminal 꾸미기"
 comments: true
 description: "cmd는 지겹다. gitbash + terminal로 이쁘게"
-categories: 개발환경
+categories: coding
 tag: ["cmd", "terminal", "gitbash"]
 toc: true
 author_profile: false
